# lightrag-slim

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
docs/: index.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
installation/: index.html
lightrag_slim/: __init__.py  base.py  exceptions.py  lightrag.py  operate.py  prompt.py  utils.py  utils_graph.py
lightrag_slim/kg/: __init__.py  json_doc_status_impl.py  json_kv_impl.py  nano_vector_db_impl.py  networkx_impl.py  shared_storage.py
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_functional.py
