[project]
name = "lightrag-slim"
version = "0.1.0"
description = "A lightweight RAG engine extracted from LightRAG - core graph-based knowledge retrieval only"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zirui Guo (original LightRAG)"},
]
keywords = ["rag", "knowledge-graph", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "json-repair",
    "nano-vectordb",
    "networkx",
    "numpy>=1.24.0,<3.0.0",
    "pydantic",
    "python-dotenv",
    "tiktoken",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lightrag_slim"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
